@@ -2,28 +2,24 @@ package net.momirealms.craftengine.core.pack.host.impl;
 
 import com.google.gson.JsonArray;
 import com.google.gson.JsonObject;
+import com.google.gson.reflect.TypeToken;
 import net.momirealms.craftengine.core.pack.host.*;
 import net.momirealms.craftengine.core.plugin.CraftEngine;
 import net.momirealms.craftengine.core.plugin.config.ConfigSection;
-import net.momirealms.craftengine.core.plugin.locale.TranslationManager;
 import net.momirealms.craftengine.core.util.GsonHelper;
 import net.momirealms.craftengine.core.util.HashUtils;
+import org.jetbrains.annotations.Nullable;
 
 import java.io.IOException;
-import java.io.InputStream;
-import java.net.ProxySelector;
+import java.io.InputStreamReader;
 import java.net.URI;
-import java.net.http.HttpClient;
 import java.net.http.HttpRequest;
 import java.net.http.HttpResponse;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.StandardOpenOption;
-import java.util.Base64;
-import java.util.Collections;
-import java.util.List;
-import java.util.UUID;
+import java.util.*;
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.locks.ReentrantLock;
 
@@ -32,59 +28,21 @@ public final class DropboxHost implements ResourcePackHost {
     private final String appKey;
     private final String appSecret;
     private final String uploadPath;
-    private final ProxySelector proxy;
     private final ReentrantLock tokenLock = new ReentrantLock();
 
     private volatile String accessToken;
     private volatile String refreshToken;
     private volatile long expiresAt;
-    private String url;
-    private String sha1;
+    private String cachedUrl;
+    private String cachedSha1;
 
-    public DropboxHost(String appKey, String appSecret, String refreshToken, String uploadPath, ProxySelector proxy) {
+    public DropboxHost(String appKey, String appSecret, String refreshToken, String uploadPath) {
         this.appKey = appKey;
         this.appSecret = appSecret;
         this.refreshToken = refreshToken;
-        this.uploadPath = uploadPath;
-        this.proxy = proxy;
-        readCacheFromDisk();
-    }
+        this.uploadPath = uploadPath.startsWith("/") ? uploadPath : "/" + uploadPath;
 
-    public void readCacheFromDisk() {
-        Path cachePath = CraftEngine.instance().dataFolderPath().resolve("cache").resolve("dropbox.json");
-        if (!Files.exists(cachePath)) return;
-        try (InputStream is = Files.newInputStream(cachePath)) {
-            JsonObject cache = GsonHelper.parseJsonToJsonObject(new String(is.readAllBytes(), StandardCharsets.UTF_8));
-            this.url = getString(cache, "url");
-            this.sha1 = getString(cache, "sha1");
-            this.refreshToken = getString(cache, "refresh_token");
-            this.accessToken = getString(cache, "access_token");
-            this.expiresAt = getLong(cache, "expires_at");
-            CraftEngine.instance().logger().info(TranslationManager.instance().plainTranslation("host.dropbox.a"));
-        } catch (Exception e) {
-            CraftEngine.instance().logger().warn(TranslationManager.instance().plainTranslation("host.dropbox.b", cachePath.toString()), e);
-        }
-    }
-
-    public void saveCacheToDisk() {
-        JsonObject cache = new JsonObject();
-        cache.addProperty("url", this.url);
-        cache.addProperty("sha1", this.sha1);
-        cache.addProperty("refresh_token", this.refreshToken);
-        cache.addProperty("access_token", this.accessToken);
-        cache.addProperty("expires_at", this.expiresAt);
-        Path cachePath = CraftEngine.instance().dataFolderPath().resolve("cache").resolve("dropbox.json");
-        try {
-            Files.createDirectories(cachePath.getParent());
-            Files.writeString(
-                    cachePath,
-                    GsonHelper.get().toJson(cache),
-                    StandardOpenOption.CREATE,
-                    StandardOpenOption.TRUNCATE_EXISTING
-            );
-        } catch (IOException e) {
-            CraftEngine.instance().logger().warn(TranslationManager.instance().plainTranslation("host.dropbox.c"), e);
-        }
+        this.readCacheFromDisk();
     }
 
     @Override
@@ -97,11 +55,15 @@ public final class DropboxHost implements ResourcePackHost {
         return ResourcePackHosts.DROPBOX;
     }
 
+    @SuppressWarnings("DuplicatedCode")
     @Override
     public CompletableFuture<List<ResourcePackDownloadData>> requestResourcePackDownloadLink(UUID player) {
-        return CompletableFuture.completedFuture(Collections.singletonList(ResourcePackDownloadData.of(
-                this.url, UUID.nameUUIDFromBytes(this.sha1.getBytes(StandardCharsets.UTF_8)), this.sha1
-        )));
+        if (this.cachedUrl == null || this.cachedSha1 == null) {
+            return CompletableFuture.completedFuture(Collections.emptyList());
+        }
+
+        UUID uuid = UUID.nameUUIDFromBytes(this.cachedSha1.getBytes(StandardCharsets.UTF_8));
+        return CompletableFuture.completedFuture(List.of(new ResourcePackDownloadData(this.cachedUrl, uuid, this.cachedSha1)));
     }
 
     @Override
@@ -110,44 +72,33 @@ public final class DropboxHost implements ResourcePackHost {
 
         CraftEngine.instance().scheduler().executeAsync(() -> {
             try {
-                String validToken = getOrRefreshToken();
-                this.sha1 = HashUtils.calculateLocalFileSha1(resourcePackPath);
-
-                try (HttpClient client = HttpClient.newBuilder().proxy(this.proxy).build()) {
-                    JsonObject apiArg = new JsonObject();
-                    apiArg.addProperty("path", this.uploadPath);
-                    apiArg.addProperty("mode", "overwrite");
-
-                    HttpRequest request = HttpRequest.newBuilder()
-                            .uri(URI.create("https://content.dropboxapi.com/2/files/upload"))
-                            .header("Authorization", "Bearer " + validToken)
-                            .header("Content-Type", "application/octet-stream")
-                            .header("Dropbox-API-Arg", apiArg.toString())
-                            .POST(HttpRequest.BodyPublishers.ofFile(resourcePackPath))
-                            .build();
-
-                    long startTime = System.currentTimeMillis();
-                    CraftEngine.instance().logger().info(TranslationManager.instance().plainTranslation("host.dropbox.d"));
-
-                    client.sendAsync(request, HttpResponse.BodyHandlers.ofString())
-                            .thenAccept(response -> {
-                                long elapsed = System.currentTimeMillis() - startTime;
-                                if (response.statusCode() == 200) {
-                                    CraftEngine.instance().logger().info(TranslationManager.instance().plainTranslation("host.dropbox.e", String.valueOf(elapsed)));
-                                    this.url = getDownloadUrl(validToken);
-                                    saveCacheToDisk();
-                                    future.complete(null);
-                                } else {
-                                    CraftEngine.instance().logger().warn(TranslationManager.instance().plainTranslation("host.dropbox.f", String.valueOf(response.statusCode()), response.body()));
-                                    future.completeExceptionally(new RuntimeException(response.body()));
-                                }
-                            })
-                            .exceptionally(ex -> {
-                                CraftEngine.instance().logger().warn(TranslationManager.instance().plainTranslation("host.dropbox.g"), ex);
-                                future.completeExceptionally(ex);
-                                return null;
-                            });
+                String token = getOrRefreshToken();
+                if (token == null) {
+                    future.completeExceptionally(new RuntimeException("Failed to obtain Dropbox access token"));
+                    return;
                 }
+
+                String localSha1 = HashUtils.calculateLocalFileSha1(resourcePackPath);
+                JsonObject apiArg = new JsonObject();
+                apiArg.addProperty("path", this.uploadPath);
+                apiArg.addProperty("mode", "overwrite");
+                apiArg.addProperty("mute", true);
+
+                HttpRequest request = HttpRequest.newBuilder()
+                        .uri(URI.create("https://content.dropboxapi.com/2/files/upload"))
+                        .header("Authorization", "Bearer " + token)
+                        .header("Dropbox-API-Arg", GsonHelper.get().toJson(apiArg))
+                        .header("Content-Type", "application/octet-stream")
+                        .POST(HttpRequest.BodyPublishers.ofFile(resourcePackPath))
+                        .build();
+
+                HttpClientManager.get().sendAsync(request, HttpResponse.BodyHandlers.ofString())
+                        .thenAccept(response -> handleUploadResponse(response, localSha1, token, future))
+                        .exceptionally(ex -> {
+                            future.completeExceptionally(ex);
+                            return null;
+                        });
+
             } catch (Exception e) {
                 future.completeExceptionally(e);
             }
@@ -156,103 +107,136 @@ public final class DropboxHost implements ResourcePackHost {
         return future;
     }
 
-    private String getDownloadUrl(String accessToken) {
-        try (HttpClient client = HttpClient.newBuilder().proxy(this.proxy).build()) {
-            JsonObject requestBody = new JsonObject();
-            requestBody.addProperty("path", this.uploadPath);
-            requestBody.add("settings", new JsonObject());
-            requestBody.getAsJsonObject("settings").addProperty("requested_visibility", "public");
+    private void handleUploadResponse(HttpResponse<String> response, String localSha1, String token, CompletableFuture<Void> future) {
+        if (response.statusCode() != 200) {
+            fail(future, "Upload HTTP " + response.statusCode(), response.body());
+            return;
+        }
 
-            HttpRequest createLinkRequest = HttpRequest.newBuilder()
-                    .uri(URI.create("https://api.dropboxapi.com/2/sharing/create_shared_link_with_settings"))
-                    .header("Authorization", "Bearer " + accessToken)
+        try {
+            this.cachedSha1 = localSha1;
+            this.cachedUrl = fetchDirectDownloadUrl(token);
+            saveCacheToDisk();
+            future.complete(null);
+        } catch (Exception e) {
+            future.completeExceptionally(e);
+        }
+    }
+
+    private String fetchDirectDownloadUrl(String token) throws IOException, InterruptedException {
+        JsonObject requestBody = new JsonObject();
+        requestBody.addProperty("path", this.uploadPath);
+
+        HttpRequest createRequest = HttpRequest.newBuilder()
+                .uri(URI.create("https://api.dropboxapi.com/2/sharing/create_shared_link_with_settings"))
+                .header("Authorization", "Bearer " + token)
+                .header("Content-Type", "application/json")
+                .POST(HttpRequest.BodyPublishers.ofString(GsonHelper.get().toJson(requestBody)))
+                .build();
+
+        HttpResponse<String> response = HttpClientManager.get().send(createRequest, HttpResponse.BodyHandlers.ofString());
+
+        String rawUrl;
+        if (response.statusCode() == 409) {
+            HttpRequest listRequest = HttpRequest.newBuilder()
+                    .uri(URI.create("https://api.dropboxapi.com/2/sharing/list_shared_links"))
+                    .header("Authorization", "Bearer " + token)
                     .header("Content-Type", "application/json")
-                    .POST(HttpRequest.BodyPublishers.ofString(requestBody.toString()))
+                    .POST(HttpRequest.BodyPublishers.ofString(GsonHelper.get().toJson(requestBody)))
                     .build();
 
-            HttpResponse<String> response = client.send(createLinkRequest, HttpResponse.BodyHandlers.ofString());
-
-            if (response.statusCode() == 409) {
-                JsonObject listRequest = new JsonObject();
-                listRequest.addProperty("path", this.uploadPath);
-
-                HttpRequest listLinksRequest = HttpRequest.newBuilder()
-                        .uri(URI.create("https://api.dropboxapi.com/2/sharing/list_shared_links"))
-                        .header("Authorization", "Bearer " + accessToken)
-                        .header("Content-Type", "application/json")
-                        .POST(HttpRequest.BodyPublishers.ofString(listRequest.toString()))
-                        .build();
-
-                HttpResponse<String> listResponse = client.send(listLinksRequest, HttpResponse.BodyHandlers.ofString());
-                JsonObject listData = GsonHelper.parseJsonToJsonObject(listResponse.body());
-                JsonArray links = listData.getAsJsonArray("links");
-                if (!links.isEmpty()) {
-                    return links.get(0).getAsJsonObject().get("url").getAsString().replace("dl=0", "dl=1");
-                }
-            }
-
-            JsonObject responseData = GsonHelper.parseJsonToJsonObject(response.body());
-            return responseData.get("url").getAsString().replace("dl=0", "dl=1");
-        } catch (IOException | InterruptedException e) {
-            throw new RuntimeException(TranslationManager.instance().plainTranslation("host.dropbox.h"), e);
+            HttpResponse<String> listResp = HttpClientManager.get().send(listRequest, HttpResponse.BodyHandlers.ofString());
+            JsonObject data = GsonHelper.parseJsonToJsonObject(listResp.body());
+            JsonArray links = data.getAsJsonArray("links");
+            if (links.isEmpty()) throw new RuntimeException("No shared links found for path: " + this.uploadPath);
+            rawUrl = links.get(0).getAsJsonObject().get("url").getAsString();
+        } else if (response.statusCode() == 200) {
+            rawUrl = GsonHelper.parseJsonToJsonObject(response.body()).get("url").getAsString();
+        } else {
+            throw new RuntimeException("Dropbox Sharing API Error: " + response.body());
         }
+
+        return rawUrl.split("\\?")[0] + "?raw=1";
     }
 
-    private String getString(JsonObject json, String key) {
-        return json.has(key) ? json.get(key).getAsString() : null;
-    }
-
-    @SuppressWarnings("SameParameterValue")
-    private long getLong(JsonObject json, String key) {
-        return json.has(key) ? json.get(key).getAsLong() : 0;
-    }
-
-    private String getOrRefreshToken() {
-        if (System.currentTimeMillis() < expiresAt - 30000 && this.accessToken != null) {
+    @Nullable
+    private String getOrRefreshToken() throws IOException, InterruptedException {
+        if (this.accessToken != null && System.currentTimeMillis() < expiresAt - 300000) {
             return this.accessToken;
         }
-        this.tokenLock.lock();
+
+        tokenLock.lock();
         try {
-            if (System.currentTimeMillis() < expiresAt - 30000 && this.accessToken != null) {
+            if (this.accessToken != null && System.currentTimeMillis() < expiresAt - 300000) {
                 return this.accessToken;
             }
 
-            String credentials = this.appKey + ":" + this.appSecret;
-            String authHeader = "Basic " + Base64.getEncoder().encodeToString(credentials.getBytes(StandardCharsets.UTF_8));
+            String authHeader = "Basic " + Base64.getEncoder().encodeToString(
+                    (this.appKey + ":" + this.appSecret).getBytes(StandardCharsets.UTF_8)
+            );
 
-            try (HttpClient client = HttpClient.newBuilder().proxy(this.proxy).build()) {
-                HttpRequest request = HttpRequest.newBuilder()
-                        .uri(URI.create("https://api.dropboxapi.com/oauth2/token"))
-                        .header("Content-Type", "application/x-www-form-urlencoded")
-                        .header("Authorization", authHeader)
-                        .POST(HttpRequest.BodyPublishers.ofString(
-                                "grant_type=refresh_token" +
-                                        "&refresh_token=" + this.refreshToken
-                        ))
-                        .build();
+            HttpRequest request = HttpRequest.newBuilder()
+                    .uri(URI.create("https://api.dropboxapi.com/oauth2/token"))
+                    .header("Content-Type", "application/x-www-form-urlencoded")
+                    .header("Authorization", authHeader)
+                    .POST(HttpRequest.BodyPublishers.ofString(
+                            "grant_type=refresh_token&refresh_token=" + this.refreshToken
+                    ))
+                    .build();
 
-                HttpResponse<String> response = client.send(request, HttpResponse.BodyHandlers.ofString());
-
-                if (response.statusCode() != 200) {
-                    throw new RuntimeException("Refresh failed: " + response.body());
-                }
-
-                JsonObject tokenData = GsonHelper.parseJsonToJsonObject(response.body());
-                this.accessToken = tokenData.get("access_token").getAsString();
-                this.expiresAt = System.currentTimeMillis() +
-                        tokenData.get("expires_in").getAsLong() * 1000;
-
-                if (tokenData.has("refresh_token")) {
-                    this.refreshToken = tokenData.get("refresh_token").getAsString();
-                }
-
-                saveCacheToDisk();
-                return this.accessToken;
-            } catch (IOException | InterruptedException e) {
-                throw new RuntimeException(TranslationManager.instance().plainTranslation("host.dropbox.i"), e);
+            HttpResponse<String> response = HttpClientManager.get().send(request, HttpResponse.BodyHandlers.ofString());
+            if (response.statusCode() != 200) {
+                CraftEngine.instance().logger().warn("Dropbox Token Refresh Failed: " + response.body());
+                return null;
             }
+
+            JsonObject data = GsonHelper.parseJsonToJsonObject(response.body());
+            this.accessToken = data.get("access_token").getAsString();
+            this.expiresAt = System.currentTimeMillis() + (data.get("expires_in").getAsLong() * 1000);
+            if (data.has("refresh_token")) {
+                this.refreshToken = data.get("refresh_token").getAsString();
+            }
+
+            saveCacheToDisk();
+            return this.accessToken;
         } finally {
-            this.tokenLock.unlock();
+            tokenLock.unlock();
+        }
+    }
+
+    private void fail(CompletableFuture<?> future, String reason, String body) {
+        String msg = "DropboxHost Error: " + reason + (body != null ? " | Body: " + body : "");
+        future.completeExceptionally(new RuntimeException(msg));
+    }
+
+    private void readCacheFromDisk() {
+        Path cachePath = CraftEngine.instance().dataFolderPath().resolve("cache").resolve("dropbox.json");
+        if (!Files.exists(cachePath)) return;
+        try (InputStreamReader isr = new InputStreamReader(Files.newInputStream(cachePath), StandardCharsets.UTF_8)) {
+            Map<String, Object> cache = GsonHelper.get().fromJson(isr, new TypeToken<Map<String, Object>>(){}.getType());
+            this.cachedUrl = (String) cache.get("url");
+            this.cachedSha1 = (String) cache.get("sha1");
+            this.refreshToken = (String) cache.getOrDefault("refresh_token", this.refreshToken);
+            this.accessToken = (String) cache.get("access_token");
+            this.expiresAt = cache.containsKey("expires_at") ? ((Double) cache.get("expires_at")).longValue() : 0;
+        } catch (Exception e) {
+            CraftEngine.instance().logger().warn("Failed to load Dropbox cache", e);
+        }
+    }
+
+    private void saveCacheToDisk() {
+        Path cachePath = CraftEngine.instance().dataFolderPath().resolve("cache").resolve("dropbox.json");
+        try {
+            Files.createDirectories(cachePath.getParent());
+            Map<String, Object> cache = new HashMap<>();
+            cache.put("url", this.cachedUrl);
+            cache.put("sha1", this.cachedSha1);
+            cache.put("refresh_token", this.refreshToken);
+            cache.put("access_token", this.accessToken);
+            cache.put("expires_at", this.expiresAt);
+            Files.writeString(cachePath, GsonHelper.get().toJson(cache), StandardOpenOption.CREATE, StandardOpenOption.TRUNCATE_EXISTING);
+        } catch (IOException e) {
+            CraftEngine.instance().logger().warn("Failed to persist Dropbox cache", e);
         }
     }
 
@@ -270,8 +254,7 @@ public final class DropboxHost implements ResourcePackHost {
             String appSecret = useEnv ? getNonNullEnvironmentVariable(section, "CE_DROPBOX_APP_SECRET") : section.getNonEmptyString(APP_SECRET);
             String refreshToken = useEnv ? getNonNullEnvironmentVariable(section, "CE_DROPBOX_REFRESH_TOKEN") : section.getNonEmptyString(REFRESH_TOKEN);
             String uploadPath = section.getNonNullString(UPLOAD_PATH);
-            ProxySelector proxy = getProxySelector(section.getSection("proxy"));
-            return new DropboxHost(appKey, appSecret, refreshToken, "/" + uploadPath, proxy);
+            return new DropboxHost(appKey, appSecret, refreshToken, uploadPath);
         }
     }
 }
