@@ -4,17 +4,13 @@ import com.google.gson.reflect.TypeToken;
 import net.momirealms.craftengine.core.pack.host.*;
 import net.momirealms.craftengine.core.plugin.CraftEngine;
 import net.momirealms.craftengine.core.plugin.config.ConfigSection;
-import net.momirealms.craftengine.core.plugin.locale.TranslationManager;
 import net.momirealms.craftengine.core.util.GsonHelper;
 import net.momirealms.craftengine.core.util.HashUtils;
 
 import java.io.IOException;
-import java.io.InputStream;
 import java.io.InputStreamReader;
-import java.net.ProxySelector;
 import java.net.URI;
 import java.net.URLEncoder;
-import java.net.http.HttpClient;
 import java.net.http.HttpRequest;
 import java.net.http.HttpResponse;
 import java.nio.charset.StandardCharsets;
@@ -29,57 +25,16 @@ public final class GitLabHost implements ResourcePackHost {
     private final String gitlabUrl;
     private final String accessToken;
     private final String projectId;
-    private final ProxySelector proxy;
 
-    private String url;
-    private String sha1;
-    private UUID uuid;
+    private String cachedUrl;
+    private String cachedSha1;
 
-    public GitLabHost(String gitlabUrl, String accessToken, String projectId, ProxySelector proxy) {
-        this.gitlabUrl = gitlabUrl;
+    public GitLabHost(String gitlabUrl, String accessToken, String projectId) {
+        this.gitlabUrl = gitlabUrl.endsWith("/") ? gitlabUrl.substring(0, gitlabUrl.length() - 1) : gitlabUrl;
         this.accessToken = accessToken;
         this.projectId = projectId;
-        this.proxy = proxy;
+
         this.readCacheFromDisk();
-    }
-
-    public void readCacheFromDisk() {
-        Path cachePath = CraftEngine.instance().dataFolderPath().resolve("cache").resolve("gitlab.json");
-        if (!Files.exists(cachePath) || !Files.isRegularFile(cachePath)) return;
-        try (InputStream is = Files.newInputStream(cachePath)) {
-            Map<String, String> cache = GsonHelper.get().fromJson(
-                    new InputStreamReader(is, StandardCharsets.UTF_8),
-                    new TypeToken<Map<String, String>>(){}.getType()
-            );
-            this.url = cache.get("url");
-            this.sha1 = cache.get("sha1");
-            String uuidString = cache.get("uuid");
-            if (uuidString != null && !uuidString.isEmpty()) {
-                this.uuid = UUID.fromString(uuidString);
-            }
-            CraftEngine.instance().logger().info(TranslationManager.instance().plainTranslation("host.gitlab.a"));
-        } catch (Exception e) {
-            CraftEngine.instance().logger().warn(TranslationManager.instance().plainTranslation("host.gitlab.b", cachePath.toString()), e);
-        }
-    }
-
-    public void saveCacheToDisk() {
-        Map<String, String> cache = new HashMap<>();
-        cache.put("url", this.url);
-        cache.put("sha1", this.sha1);
-        cache.put("uuid", this.uuid != null ? this.uuid.toString() : "");
-        Path cachePath = CraftEngine.instance().dataFolderPath().resolve("cache").resolve("gitlab.json");
-        try {
-            Files.createDirectories(cachePath.getParent());
-            Files.writeString(
-                    cachePath,
-                    GsonHelper.get().toJson(cache),
-                    StandardOpenOption.CREATE,
-                    StandardOpenOption.TRUNCATE_EXISTING
-            );
-        } catch (IOException e) {
-            CraftEngine.instance().logger().warn(TranslationManager.instance().plainTranslation("host.gitlab.c"), e);
-        }
     }
 
     @Override
@@ -88,74 +43,112 @@ public final class GitLabHost implements ResourcePackHost {
     }
 
     @Override
+    public ResourcePackHostType<GitLabHost> type() {
+        return ResourcePackHosts.GITLAB;
+    }
+
+    @SuppressWarnings("DuplicatedCode")
+    @Override
     public CompletableFuture<List<ResourcePackDownloadData>> requestResourcePackDownloadLink(UUID player) {
-        if (url == null) return CompletableFuture.completedFuture(Collections.emptyList());
-        return CompletableFuture.completedFuture(List.of(ResourcePackDownloadData.of(this.url, this.uuid, this.sha1)));
+        if (this.cachedUrl == null || this.cachedSha1 == null) {
+            return CompletableFuture.completedFuture(Collections.emptyList());
+        }
+        UUID uuid = UUID.nameUUIDFromBytes(this.cachedSha1.getBytes(StandardCharsets.UTF_8));
+        return CompletableFuture.completedFuture(List.of(new ResourcePackDownloadData(this.cachedUrl, uuid, this.cachedSha1)));
     }
 
     @Override
     public CompletableFuture<Void> upload(Path resourcePackPath) {
         CompletableFuture<Void> future = new CompletableFuture<>();
+
         CraftEngine.instance().scheduler().executeAsync(() -> {
-            this.sha1 = HashUtils.calculateLocalFileSha1(resourcePackPath);
-            this.uuid = UUID.nameUUIDFromBytes(this.sha1.getBytes(StandardCharsets.UTF_8));
-            try (HttpClient client = HttpClient.newBuilder().proxy(this.proxy).build()) {
-                String boundary = UUID.randomUUID().toString();
+            try {
+                String localSha1 = HashUtils.calculateLocalFileSha1(resourcePackPath);
+                String boundary = "CraftEngineBoundary" + System.currentTimeMillis();
+
                 HttpRequest request = HttpRequest.newBuilder()
                         .uri(URI.create(this.gitlabUrl + "/api/v4/projects/" + this.projectId + "/uploads"))
                         .header("PRIVATE-TOKEN", this.accessToken)
                         .header("Content-Type", "multipart/form-data; boundary=" + boundary)
-                        .POST(buildMultipartBody(resourcePackPath, boundary))
+                        .POST(buildMultipartBodyPublisher(resourcePackPath, boundary))
                         .build();
-                long uploadStart = System.currentTimeMillis();
-                CraftEngine.instance().logger().info(TranslationManager.instance().plainTranslation("host.gitlab.d"));
-                client.sendAsync(request, HttpResponse.BodyHandlers.ofString())
-                        .thenAccept(response -> {
-                            long uploadTime = System.currentTimeMillis() - uploadStart;
-                            CraftEngine.instance().logger().info(TranslationManager.instance().plainTranslation("host.gitlab.e", String.valueOf(uploadTime)));
-                            if (response.statusCode() == 200 || response.statusCode() == 201) {
-                                Map<String, Object> json = GsonHelper.parseJsonToMap(response.body());
-                                if (json.containsKey("full_path")) {
-                                    this.url = this.gitlabUrl + json.get("full_path");
-                                    future.complete(null);
-                                    saveCacheToDisk();
-                                    return;
-                                }
-                            }
-                            CraftEngine.instance().logger().warn(TranslationManager.instance().plainTranslation("host.gitlab.f", response.body()));
-                            future.completeExceptionally(new RuntimeException(TranslationManager.instance().plainTranslation("host.gitlab.g", response.body())));
-                        })
+
+                HttpClientManager.get().sendAsync(request, HttpResponse.BodyHandlers.ofString())
+                        .thenAccept(response -> handleUploadResponse(response, localSha1, future))
                         .exceptionally(ex -> {
-                            CraftEngine.instance().logger().warn(TranslationManager.instance().plainTranslation("host.gitlab.h"), ex);
                             future.completeExceptionally(ex);
                             return null;
                         });
-            } catch (IOException e) {
-                CraftEngine.instance().logger().warn(TranslationManager.instance().plainTranslation("host.gitlab.i"), e);
+            } catch (Exception e) {
+                future.completeExceptionally(e);
             }
         });
+
         return future;
     }
 
-    private HttpRequest.BodyPublisher buildMultipartBody(Path filePath, String boundary) throws IOException {
-        List<byte[]> parts = new ArrayList<>();
-        String filePartHeader = "--" + boundary + "\r\n" +
-                "Content-Disposition: form-data; name=\"file\"; filename=\"" + filePath.getFileName() + "\"\r\n" +
-                "Content-Type: application/octet-stream\r\n\r\n";
-        parts.add(filePartHeader.getBytes(StandardCharsets.UTF_8));
+    private void handleUploadResponse(HttpResponse<String> response, String localSha1, CompletableFuture<Void> future) {
+        if (response.statusCode() != 200 && response.statusCode() != 201) {
+            fail(future, "Upload HTTP " + response.statusCode(), response.body());
+            return;
+        }
 
-        parts.add(Files.readAllBytes(filePath));
-        parts.add("\r\n".getBytes(StandardCharsets.UTF_8));
-
-        String endBoundary = "--" + boundary + "--\r\n";
-        parts.add(endBoundary.getBytes(StandardCharsets.UTF_8));
-
-        return HttpRequest.BodyPublishers.ofByteArrays(parts);
+        try {
+            Map<String, Object> json = GsonHelper.parseJsonToMap(response.body());
+            if (json.containsKey("full_path")) {
+                this.cachedUrl = this.gitlabUrl + json.get("full_path");
+                this.cachedSha1 = localSha1;
+                saveCacheToDisk();
+                future.complete(null);
+            } else {
+                fail(future, "Missing full_path in response", response.body());
+            }
+        } catch (Exception e) {
+            future.completeExceptionally(e);
+        }
     }
 
-    @Override
-    public ResourcePackHostType<GitLabHost> type() {
-        return ResourcePackHosts.GITLAB;
+    private HttpRequest.BodyPublisher buildMultipartBodyPublisher(Path filePath, String boundary) throws IOException {
+        String fileName = filePath.getFileName().toString();
+        byte[] start = ("--" + boundary + "\r\n" +
+                "Content-Disposition: form-data; name=\"file\"; filename=\"" + fileName + "\"\r\n" +
+                "Content-Type: application/octet-stream\r\n\r\n").getBytes(StandardCharsets.UTF_8);
+        byte[] end = ("\r\n--" + boundary + "--\r\n").getBytes(StandardCharsets.UTF_8);
+        return HttpRequest.BodyPublishers.ofByteArrays(List.of(
+                start,
+                Files.readAllBytes(filePath),
+                end
+        ));
+    }
+
+    private void fail(CompletableFuture<?> future, String reason, String body) {
+        String msg = "GitLabHost Error: " + reason + (body != null ? " | Body: " + body : "");
+        future.completeExceptionally(new RuntimeException(msg));
+    }
+
+    private void readCacheFromDisk() {
+        Path cachePath = CraftEngine.instance().dataFolderPath().resolve("cache").resolve("gitlab.json");
+        if (!Files.exists(cachePath)) return;
+        try (InputStreamReader isr = new InputStreamReader(Files.newInputStream(cachePath), StandardCharsets.UTF_8)) {
+            Map<String, String> cache = GsonHelper.get().fromJson(isr, new TypeToken<Map<String, String>>(){}.getType());
+            this.cachedUrl = cache.get("url");
+            this.cachedSha1 = cache.get("sha1");
+        } catch (Exception e) {
+            CraftEngine.instance().logger().warn("Failed to load GitLab cache", e);
+        }
+    }
+
+    private void saveCacheToDisk() {
+        Path cachePath = CraftEngine.instance().dataFolderPath().resolve("cache").resolve("gitlab.json");
+        try {
+            Files.createDirectories(cachePath.getParent());
+            Map<String, String> cache = new HashMap<>();
+            cache.put("url", this.cachedUrl != null ? this.cachedUrl : "");
+            cache.put("sha1", this.cachedSha1 != null ? this.cachedSha1 : "");
+            Files.writeString(cachePath, GsonHelper.get().toJson(cache), StandardOpenOption.CREATE, StandardOpenOption.TRUNCATE_EXISTING);
+        } catch (IOException e) {
+            CraftEngine.instance().logger().warn("Failed to persist GitLab cache", e);
+        }
     }
 
     private static class Factory implements ResourcePackHostFactory<GitLabHost> {
@@ -168,13 +161,10 @@ public final class GitLabHost implements ResourcePackHost {
         public GitLabHost create(ConfigSection section) {
             boolean useEnv = section.getBoolean(USE_ENVIRONMENT_VARIABLES);
             String gitlabUrl = section.getNonEmptyString(GITLAB_URL);
-            if (gitlabUrl.endsWith("/")) {
-                gitlabUrl = gitlabUrl.substring(0, gitlabUrl.length() - 1);
-            }
             String accessToken = useEnv ? getNonNullEnvironmentVariable(section, "CE_GITLAB_ACCESS_TOKEN") : section.getNonEmptyString(ACCESS_TOKEN);
             String projectId = section.getNonEmptyString(PROJECT_ID);
             projectId = URLEncoder.encode(projectId, StandardCharsets.UTF_8).replace("/", "%2F");
-            return new GitLabHost(gitlabUrl, accessToken, projectId, getProxySelector(section.getSection("proxy")));
+            return new GitLabHost(gitlabUrl, accessToken, projectId);
         }
     }
 }
